@@ -1,3 +1,8 @@
+2006-09-04  Chong Yidong  <cyd@stupidchicken.com>
+
+	* message.el (message-send-mail-with-sendmail): Look for sendmail in
+	several common directories.
+
 2006-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* rfc2047.el (rfc2047-strip-backslashes-in-quoted-strings): Decode `\\'
